# agent_sandbox

./: .dockerignore  .env.example  .gitignore  ADK_CONCEPTS.md  AGENTS.md  Dockerfile  README.md  docker-compose.postgres.yml  info.md  main.py  pyproject.toml
agents/: README.md  __init__.py
agents/farsight_orchestrator/: README.md  __init__.py  agent.py  edgar_ingest.py  loop_agent.py  observability.py  sec_edgar_tools.py
agents/report_gen/: AGENTIC_DESIGN.md  agent.py  loop_agent.py  sales_olap.py
agents/report_gen/.adk/: session.db
agents/sec_kpi_orchestrator/: README.md  __init__.py  agent.py  finance_tools.py  loop_agent.py  observability.py
agents_workspace/: SEC_KPI_AGENT_FEATURE_CHECKLIST.md
agents_workspace/artifacts/farsight/nvda/: latest_deck_data.json  latest_deck_draft.md  latest_sources.md
agents_workspace/designs/: farsight-ai-design.md
agents_workspace/docs/: adk_docs_reference.md  farsight_session_eb803ada_call_walkthrough.md  otel_farsight_guide.md  otel_sec_kpi_guide.md
models/: pyproject.toml
models/slm_search/: design.md  slm_search_prototype.ipynb
scripts/: run_adk_web_postgres.sh  run_adk_web_sqlite.sh
scripts/observability/: docker-compose.otel-grafana.yml  run_otel_stack.sh  tempo.yaml
scripts/observability/grafana/provisioning/datasources/: datasources.yml
