[tool.poetry]
name = "models-workbench"
version = "0.1.0"
description = "Notebook and model experiments for slm_search"
authors = ["dxscale"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.2"
datasets = "^4.1.1"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
